[package]
name = "dleq-secret"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = "4.1"
rand_core = { version = "0.6" }
sha2 =  { version = "0.10", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["rand_core/getrandom", "sha2/std"]

